Class and style binding

--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
-            <p v-if="inventory > 10">In stock</p>
-            <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
+            <p v-if="isStock">In stock</p>
             <p v-else>Out of stock</p>
             <ul>
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
-            <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">
-              {{ variant.color }}
-            </div>
-            <button @click="addToCart" class="button">Add to Cart</button>
+            <div
+              v-for="variant in variants"
+              :key="variant.id"
+              @mouseover="updateImage(variant.image)"
+              class="color-circle"
+              :style="{ backgroundColor: variant.color}"
+            ></div>
+            <button @click="addToCart" :disabled="!isStock" class="button" :class="{disabledButton: !isStock}">
+              Add to Cart
+            </button>
           </div>
         </div>
       </div>
