--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
             <img :src="image" />
           </div>
           <div class="product-info">
-            <h1>{{ product }}</h1>
-            <p v-if="isStock">In stock</p>
+            <h1>{{ title }}</h1>
+            <p v-if="inStock">In stock</p>
             <p v-else>Out of stock</p>
             <ul>
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
             <div
-              v-for="variant in variants"
+              v-for="(variant, index) in variants"
               :key="variant.id"
-              @mouseover="updateImage(variant.image)"
+              @mouseover="updateVariant(index)"
               class="color-circle"
               :style="{ backgroundColor: variant.color}"
             ></div>
-            <button @click="addToCart" :disabled="!isStock" class="button" :class="{disabledButton: !isStock}">
+            <button @click="addToCart" :disabled="!inStock" class="button" :class="{disabledButton: !inStock}">
               Add to Cart
             </button>
           </div>
