--- a/index.html
+++ b/index.html
@@ -11,37 +11,15 @@
   <body>
     <div id="app">
       <div class="nav-bar"></div>
-
       <div class="cart">Cart({{ cart }})</div>
-
-      <div class="product-display">
-        <div class="product-container">
-          <div class="product-image">
-            <img :src="image" />
-          </div>
-          <div class="product-info">
-            <h1>{{ title }}</h1>
-            <p v-if="inStock">In stock</p>
-            <p v-else>Out of stock</p>
-            <ul>
-              <li v-for="detail in details">{{ detail }}</li>
-            </ul>
-            <div
-              v-for="(variant, index) in variants"
-              :key="variant.id"
-              @mouseover="updateVariant(index)"
-              class="color-circle"
-              :style="{ backgroundColor: variant.color}"
-            ></div>
-            <button @click="addToCart" :disabled="!inStock" class="button" :class="{disabledButton: !inStock}">
-              Add to Cart
-            </button>
-          </div>
-        </div>
-      </div>
+      <product-display :premium="premium"></product-display>
     </div>
 
     <!-- Import Js -->
     <script src="./main.js"></script>
+    <script src="./components/ProductDisplay.js"></script>
+    <script>
+      const mountApp = app.mount('#app');
+    </script>
   </body>
 </html>
