Form and v-model

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <!-- Import Js -->
     <script src="./main.js"></script>
     <script src="./components/ProductDisplay.js"></script>
+    <script src="./components/ReviewForm.js"></script>
+    <script src="./components/ReviewList.js"></script>
     <script>
       const mountApp = app.mount('#app');
     </script>
